[project]
name = "python-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.14.0",
    "openai-agents>=0.6.4",
    "openai-core>=0.0.1",
    "openapi-schema-validator>=0.6.3",
    "openapi-spec-validator>=0.7.2",
    "opentelemetry-api>=1.39.1",
    "requests>=2.32.5",
    "sendgrid>=6.12.5",
    "tavily-python>=0.7.17",
]
